vm/snapshots/variables-array_components-increment_decrement-IncrementDecrementOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Increment/decrement test passed.
----- STDERR -----
