vm/snapshots/variables-array_components-index_expressions-IndexExpressionsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Index expressions test passed.
----- STDERR -----
