vm/snapshots/variables-array_components-initializer-basic-ArrayInitializerOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Array initializer tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Array initializer tests passed.
----- STDERR -----
