vm/snapshots/variables-array_components-jagged_arrays-JaggedArraysOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Jagged arrays test passed.
----- STDERR -----
