vm/snapshots/variables-array_components-multidimensional-int_2d-Int2dOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
2D int array test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
2D int array test passed.
----- STDERR -----
