vm/snapshots/variables-array_components-multidimensional-int_3d-Int3dOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
3D int array test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
3D int array test passed.
----- STDERR -----
