vm/snapshots/variables-array_components-multidimensional-int_4d-Int4dOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
4D int array test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
4D int array test passed.
----- STDERR -----
