vm/snapshots/variables-array_components-multidimensional-jagged_3d-Jagged3dOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged 3D test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged 3D test passed.
----- STDERR -----
