vm/snapshots/variables-array_components-multidimensional-jagged_basic-JaggedBasicOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged basic test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged basic test passed.
----- STDERR -----
