vm/snapshots/variables-array_components-multidimensional-jagged_null_rows-JaggedNullRowsOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged null rows test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged null rows test passed.
----- STDERR -----
