vm/snapshots/variables-array_components-multidimensional-jagged_reassign-JaggedReassignOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged reassign test passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Jagged reassign test passed.
----- STDERR -----
